--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
 
       # download dependencies
       - name: build
-        run: .\build.sh
+        run: ./build.sh
 
       # upload zipped app
       - name: upload
